fix some broken ui

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,20 @@ html * {
     color: var(--color-text-active-primary);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+textarea {
+    border: none;
+}
+
 /********** CUSTOM SCROLLBAR *********/
 html,
 body {
